--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
 		"@fontsource/fira-mono": "^4.5.0",
 		"@lukeed/uuid": "^2.0.0",
 		"cookie": "^0.4.1",
+		"googleapis": "^89.0.0",
+		"jose": "^4.1.0",
 		"jsrsasign": "^10.4.1",
+		"jwt-decode": "^3.1.2",
+		"node-rsa": "^1.1.1",
 		"pg": "^8.7.1"
 	}
 }
