--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@fontsource/fira-mono": "^4.5.0",
 		"@lukeed/uuid": "^2.0.0",
 		"cookie": "^0.4.1",
+		"crypto-random-string": "^4.0.0",
 		"googleapis": "^89.0.0",
 		"jose": "^4.1.0",
 		"jsrsasign": "^10.4.1",
