--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"build": "svelte-kit build",
 		"preview": "svelte-kit preview",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+		"start": "svelte-kit preview --host"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-node": "^1.0.0-next.53",
