--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"preview": "svelte-kit preview",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-		"start": "svelte-kit preview --host -p PORT"
+		"start": "svelte-kit preview --host -p $PORT"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-node": "^1.0.0-next.53",
